[gd_scene load_steps=7 format=2]

[ext_resource path="res://menu/m_enu.png" type="Texture" id=1]
[ext_resource path="res://cenas_node/Button_fechar.gd" type="Script" id=2]
[ext_resource path="res://cenas_node/iniciar_button.gd" type="Script" id=3]
[ext_resource path="res://menu/Open_button.png" type="Texture" id=4]
[ext_resource path="res://menu/Close_button.png" type="Texture" id=5]
[ext_resource path="res://cenas_node/menu.gd" type="Script" id=6]

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 639.25, 347.5 )
scale = Vector2( 0.664323, 0.641667 )
texture = ExtResource( 1 )

[node name="Button_iniciar" type="Button" parent="."]
margin_left = 283.0
margin_top = 491.0
margin_right = 535.0
margin_bottom = 565.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button_iniciar"]
position = Vector2( 123, 41 )
scale = Vector2( 0.858824, 0.85 )
texture = ExtResource( 4 )

[node name="Button_fechar" type="Button" parent="."]
margin_left = 784.0
margin_top = 491.0
margin_right = 1040.0
margin_bottom = 568.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button_fechar"]
position = Vector2( 128, 40 )
scale = Vector2( 0.861765, 0.8375 )
texture = ExtResource( 5 )

[connection signal="mouse_entered" from="Button_iniciar" to="Button_iniciar" method="_on_Button_iniciar_mouse_entered"]
[connection signal="mouse_exited" from="Button_iniciar" to="Button_iniciar" method="_on_Button_iniciar_mouse_exited"]
[connection signal="pressed" from="Button_iniciar" to="Button_iniciar" method="_on_Button_iniciar_pressed"]
[connection signal="mouse_entered" from="Button_fechar" to="Button_fechar" method="_on_Button_fechar_mouse_entered"]
[connection signal="mouse_exited" from="Button_fechar" to="Button_fechar" method="_on_Button_fechar_mouse_exited"]
[connection signal="pressed" from="Button_fechar" to="Button_fechar" method="_on_Button_fechar_pressed"]
